--- a/scss/foundation/_settings.scss
+++ b/scss/foundation/_settings.scss
@@ -1215,5 +1215,5 @@ $topbar-transition-speed: 0ms;
 
 // Footer
 $footer-bg-color: #383838;
-$footer-font-color: #CCC;
-$footer-padding-top: emCalc(20)
+$footer-font-color: #DFDFDF;
+$footer-padding-top: emCalc(20);
